src/tests/testfiles/binary-operators/10.txt
testfiles/binary-operators/10.c:2:7: error: invalid operands to comparison '>' (have 'int' and 'char []')
4 > "a";
  ^
